--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -732,6 +732,8 @@ $navbar-active-border-color: var(--#{$prefix}primary) !default;
 
 // Sidebar
 $sidebar-width: 15rem !default;
+// Sidebar small
+$sidebar-small-width: 4.5rem !default;
 
 // Popover
 $popover-bg: var(--#{$prefix}bg-surface) !default;
