--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -197,7 +197,7 @@ Navbar
         &.navbar-small{
           ~ .navbar,
           ~ .page-wrapper {
-            margin-left: $sidebar-small-width - 2rem;
+            margin-left: $sidebar-small-width;
           }
 
           .nav-link-title{
@@ -413,6 +413,8 @@ Navbar vertical
         }
       }
     }
+
+
     &.navbar-small{
       @each $breakpoint in map-keys($grid-breakpoints) {
         $next: breakpoint-next($breakpoint, $grid-breakpoints);
@@ -505,25 +507,21 @@ Navbar vertical
   }
 }
 
-.navbar-vertical.navbar-small {
-  // width: $sidebar-width;
-  transition: all 0.3s; // Add a transition to change all properties over 1 second
-
-
-  .nav-link {
-    justify-content: flex-start !important;
-  }
-
-  .nav-link-icon {
-    margin-right: 0.5rem;
-  }
-}
-
-.navbar-vertical.navbar-small:hover {
-  width: $sidebar-width; // Change the width on hover
-
-  .nav-link-title {
-    display: inline-block;
-    transition: all 0.3s; // Add a transition to change all properties over 1 second
+.collapse.navbar-collapse:hover{
+  .navbar-vertical.navbar-small {
+    width: $sidebar-width;
+    transition: all 0.3s;
+    
+    .nav-link-title{
+      display: block;
+    }
+  
+    .nav-link{
+      justify-content: flex-start !important;
+    }
+  
+    .nav-link-icon {
+      margin-right: 0.5rem;
+    }
   }
 }
